Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,35 @@
 trigger:
 - main
+- master
 
 pool:
   vmImage: 'windows-latest'
 
 variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '5.x' # or the appropriate version of .NET Framework or .NET Core
+    version: '5.x' # Adjust to your project's .NET version
 
 - task: NuGetToolInstaller@1
   inputs:
-    versionSpec: '5.x' # Use the appropriate NuGet version for your project
+    versionSpec: '5.x'
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution: '**/*.sln'
+    restoreSolution: '$(solution)'
 
-- script: |
-    msbuild /p:Configuration=$(buildConfiguration) /p:Platform="Any CPU"
-  displayName: 'Build Solution'
+- task: VSBuild@1
+  inputs:
+    solution: '$(solution)'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
 
 - task: VSTest@2
   inputs:
